--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,12 @@
 [project]
-name = "hereus_ui_4_0"
-version = "4.0.0"
-description = "HereUS UI 4.0 for BevyFrame"
+name = "huvtsp_alumni_theme"
+version = "1.0.0"
+description = "HUVTSP Alumni Theme"
 readme = "README.md"
 license = {text = "Creative Commons Attribution ShareAlike 4.0"}
 maintainers = []
-requires-python = ">= 3.9"
+requires-python = ">= 3.11"
 dependencies = []
-
-[project.urls]
-Homepage = "https://ui.hereus.net/"
 
 [build-system]
 requires = ["setuptools","wheel"]
